--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -97,7 +97,7 @@
     <color name="darkviolet">#9400D3</color>
     <color name="mediumpurple">#9370DB</color>
     <color name="lightgreen">#90EE90</color>
-    <color name="darkseagreen">#8FBC8F</color>
+    <color name="darkseagreen">#8fbc8f</color>
     <color name="saddlebrown">#8B4513</color>
     <color name="darkmagenta">#8B008B</color>
     <color name="darkred">#8B0000</color>
