--- a/app/src/main/res/layout/main_input.xml
+++ b/app/src/main/res/layout/main_input.xml
@@ -3,17 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:weightSum="1"
-    android:layout_marginLeft="10dp"
-    android:background="@android:color/darker_gray"
+    android:layout_marginStart="10dp"
+    android:background="@color/yellow"
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:text="@string/prompt_insulin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_margin="6dp" />
 
     <EditText
         android:id="@+id/currentInsulin"
@@ -24,9 +18,8 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint=" "
         android:ems="5"
-        android:background="@color/my_yellow"
+        android:background="@color/yellow"
         android:imeOptions="actionDone"/>
 
 
