--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,11 +14,13 @@
     <item android:id="@+id/action_pdf"
         android:title="@string/generate_pdf_report"
         app:showAsAction="never"/>
-
+    <item android:id="@+id/action_delete"
+        android:title="@string/action_delete"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_reset"
         android:title="@string/reset_database"
         app:showAsAction="never"/>
-    <item android:id="@+id/action_wxit"
+    <item android:id="@+id/action_exit"
         android:title="@string/exit"
         app:showAsAction="never"/>
 
