--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -100,7 +100,7 @@
     <color name="darkseagreen">#8fbc8f</color>
     <color name="saddlebrown">#8B4513</color>
     <color name="darkmagenta">#8B008B</color>
-    <color name="darkred">#8B0000</color>
+    <color name="darkred">#8b0000</color>
     <color name="blueviolet">#8A2BE2</color>
     <color name="lightskyblue">#87CEFA</color>
     <color name="skyblue">#87CEEB</color>
