--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true" >
 
 
     <LinearLayout
@@ -191,7 +193,7 @@
         android:id="@+id/saveButton"
         android:layout_below="@+id/calcButton"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/darkseagreen" />
+        android:textColor="@color/red" />
 
     <TableLayout
         android:layout_width="match_parent"
