--- a/app/src/main/res/layout/activity_init_data.xml
+++ b/app/src/main/res/layout/activity_init_data.xml
@@ -13,7 +13,7 @@
 
     android:id="@+id/activity_init_data"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
