--- a/app/src/main/res/layout-iw/activity_main.xml
+++ b/app/src/main/res/layout-iw/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.ashervardi.diabetesapp2.MainActivity"
-    android:theme="@style/AppTheme">
+    tools:context="com.ashervardi.diabetesapp2.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
