--- a/app/src/main/res/layout-iw/content_main.xml
+++ b/app/src/main/res/layout-iw/content_main.xml
@@ -267,7 +267,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/saveButton"
-        android:textColor="@color/red"
+        android:textColor="@color/blueviolet"
         android:layout_below="@+id/calcButton"
         android:layout_alignEnd="@+id/calcButton" />
 
