--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,8 +9,11 @@
         android:title="@string/action_init"
         app:showAsAction="never"/>
     <item android:id="@+id/action_history"
-        android:title="@string/action_history"
-        app:showAsAction="ifRoom"/>
+    android:title="@string/action_history"
+    app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_plot"
+        android:title="@string/action_plot"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_pdf"
         android:title="@string/generate_pdf_report"
         app:showAsAction="never"/>
