--- a/app/src/main/res/menu-iw/menu_main.xml
+++ b/app/src/main/res/menu-iw/menu_main.xml
@@ -21,7 +21,10 @@
         android:title="@string/action_delete"
         app:showAsAction="never"/>
     <item android:id="@+id/action_reset"
-        android:title="@string/reset_database"
+    android:title="@string/reset_database"
+    app:showAsAction="never"/>
+    <item android:id="@+id/action_help"
+        android:title="@string/action_help"
         app:showAsAction="never"/>
     <item android:id="@+id/action_exit"
         android:title="@string/exit"
