--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="lavenderblush">#FFF0F5</color>
     <color name="papayawhip">#FFEFD5</color>
     <color name="blanchedalmond">#FFEBCD</color>
-    <color name="mistyrose">#FFE4E1</color>
+    <color name="mistyrose">#ffe4e1</color>
     <color name="bisque">#FFE4C4</color>
     <color name="moccasin">#FFE4B5</color>
     <color name="navajowhite">#FFDEAD</color>
@@ -87,7 +87,7 @@
     <color name="lightsteelblue">#B0C4DE</color>
     <color name="paleturquoise">#AFEEEE</color>
     <color name="greenyellow">#ADFF2F</color>
-    <color name="lightblue">#ADD8E6</color>
+    <color name="lightblue">#add8e6</color>
     <color name="darkgray">#A9A9A9</color>
     <color name="brown">#A52A2A</color>
     <color name="sienna">#A0522D</color>
@@ -146,7 +146,7 @@
     <color name="teal">#008080</color>
     <color name="green">#008000</color>
     <color name="darkgreen">#006400</color>
-    <color name="blue">#0000FF</color>
+    <color name="blue">#0000ff</color>
     <color name="mediumblue">#0000CD</color>
     <color name="darkblue">#00008B</color>
     <color name="navy">#000080</color>
